Gradient - fix first jump - loader.

--- a/style.scss
+++ b/style.scss
@@ -73,6 +73,10 @@ p {
         background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba($color, 0.25) 100%);
       }
     }
+
+    &-0 {
+      opacity: 1;
+    }
   }
 
 
